--- a/plugin/locale/pt/LC_MESSAGES/MediaPlayer2.po
+++ b/plugin/locale/pt/LC_MESSAGES/MediaPlayer2.po
@@ -5,7 +5,7 @@ msgstr ""
 "POT-Creation-Date: 2015-01-27 10:00+0100\n"
 "PO-Revision-Date: 2016-09-29 00:39+0100\n"
 "Last-Translator: shimano\n"
-"Language-Team: Shimano <none>\n"
+"Language-Team: Shimano \n"
 "Language: pt_PT\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -301,4 +301,3 @@ msgstr "Retomar a Reprodução"
 
 msgid "context menu"
 msgstr "menu de contexto"
-
